[gd_scene load_steps=10 format=3 uid="uid://bqems8067pb7g"]

[ext_resource type="Script" path="res://scenes/world.gd" id="1_7qaul"]
[ext_resource type="Script" path="res://AI.gd" id="1_ul4u5"]
[ext_resource type="PackedScene" uid="uid://p2b2ofj55jvm" path="res://scenes/background.tscn" id="1_usdun"]
[ext_resource type="PackedScene" uid="uid://b781jjfyxoh70" path="res://scenes/pacman.tscn" id="2_dk1te"]
[ext_resource type="PackedScene" uid="uid://fvuhrjbe0uv7" path="res://scenes/sounds.tscn" id="3_8hy80"]
[ext_resource type="PackedScene" uid="uid://yd6u3mpmeun" path="res://scenes/ghost.tscn" id="3_d0lj4"]
[ext_resource type="Script" path="res://scenes/CanvasLayer.gd" id="5_hmw05"]
[ext_resource type="PackedScene" uid="uid://dobr8m01y3p01" path="res://scenes/utils.tscn" id="6_dq74l"]

[sub_resource type="LabelSettings" id="LabelSettings_fcvhb"]
font_size = 50

[node name="World" type="Node2D"]
script = ExtResource("1_7qaul")

[node name="utils" parent="." instance=ExtResource("6_dq74l")]

[node name="sounds" parent="." instance=ExtResource("3_8hy80")]

[node name="background" parent="." instance=ExtResource("1_usdun")]
position = Vector2(-2, -7)
metadata/_edit_group_ = true

[node name="AI" type="Node2D" parent="."]
script = ExtResource("1_ul4u5")

[node name="navigation_timer" type="Timer" parent="AI"]
autostart = true

[node name="pacman" parent="." instance=ExtResource("2_dk1te")]
z_index = 1
position = Vector2(101, 75)
scale = Vector2(4.5, 4.5)

[node name="ghost" parent="." instance=ExtResource("3_d0lj4")]
position = Vector2(1832, 927)
scale = Vector2(4.5, 4.5)

[node name="debug" type="CanvasLayer" parent="."]
script = ExtResource("5_hmw05")

[node name="Line2D" type="Line2D" parent="debug"]
width = 4.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="scorelabel" type="Label" parent="HUD"]
offset_left = 878.0
offset_top = 5.0
offset_right = 937.0
offset_bottom = 39.0
text = "SCORE
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="HUD"]
offset_left = 943.0
offset_top = 8.0
offset_right = 971.0
offset_bottom = 35.0
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gameoverlabel" type="Label" parent="HUD"]
visible = false
offset_left = -29.0
offset_top = 60.0
offset_right = 1881.0
offset_bottom = 1083.0
text = "GAME OVER
"
label_settings = SubResource("LabelSettings_fcvhb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="power_up_timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="power_up" from="." to="pacman" method="_on_world_power_up"]
[connection signal="power_up" from="." to="ghost" method="_on_world_power_up"]
[connection signal="path_changed" from="AI" to="debug" method="_on_ai_path_changed"]
[connection signal="timeout" from="AI/navigation_timer" to="AI" method="_on_navigation_timer_timeout" flags=18]
[connection signal="game_over" from="pacman" to="." method="_on_pacman_game_over"]
[connection signal="timeout" from="power_up_timer" to="." method="_on_power_up_timer_timeout"]
